--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src= "personalimage/dipesh.jpg-modified.png " alt="Dipesh profile picture."></td>
+      <td><img src= "image/dipesh.jpg-modified.png " alt="Dipesh profile picture."></td>
       <td><h1>Dipesh Kr Burnwal</h1>
       <p><em>The student of <strong> <a href="https://jgec.ac.in/">jgec</a>.</strong></em></p>
       <p><em>Department of <strong> <a href="https://jgec.ac.in/php/it/index.php?od=1">Information Technology.</a></strong></em></p>
